--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,24 +19,24 @@
             <div id="navbarMenuHeroA" class="navbar-menu">
               <div class="navbar-brand">
                 <a href="{{ url_for('main.index') }}" class="navbar-item">
-                  Home
+                  home
                 </a>
               </div>
               <div class="navbar-end">
                 {% if current_user.is_authenticated %}
-                <a href="{{ url_for('main.profile') }}" class="navbar-item">
-                  Profile
+                <a href="{{ url_for('auth.account') }}" class="navbar-item">
+                  account
                 </a>
                 {% endif %} {% if not current_user.is_authenticated %}
                 <a href="{{ url_for('auth.login') }}" class="navbar-item">
-                  Login
+                  login
                 </a>
                 <a href="{{ url_for('auth.signup') }}" class="navbar-item">
-                  Sign Up
+                  sign up
                 </a>
                 {% endif %} {% if current_user.is_authenticated %}
                 <a href="{{ url_for('auth.logout') }}" class="navbar-item">
-                  Logout
+                  logout
                 </a>
                 {% endif %}
               </div>
