--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,6 +21,16 @@
                 <a href="{{ url_for('main.index') }}" class="navbar-item">
                   home
                 </a>
+                <!-- <a
+                  role="button"
+                  class="navbar-burger"
+                  aria-label="menu"
+                  aria-expanded="false"
+                >
+                  <span aria-hidden="true"></span>
+                  <span aria-hidden="true"></span>
+                  <span aria-hidden="true"></span>
+                </a> -->
               </div>
               <div class="navbar-end">
                 {% if current_user.is_authenticated %}
