--- a/app/templates/change_password.html
+++ b/app/templates/change_password.html
@@ -3,35 +3,26 @@
   <div class="column is-narrow">
     <h3 class="subtitle">Change Password</h3>
     <div class="box">
-      {% with messages =
-      get_flashed_messages(category_filter=['password_error']) %} {% if messages
-      %}
+      {% with messages = get_flashed_messages(category_filter=['error']) %} {%
+      if messages %}
       <div class="notification is-danger">{{ messages[0] }}</div>
       {% endif %} {% endwith %} {% with messages =
-      get_flashed_messages(category_filter=['password_success']) %} {% if
-      messages %}
+      get_flashed_messages(category_filter=['success']) %} {% if messages %}
       <div class="notification is-success">{{ messages[0] }}</div>
       {% endif %} {% endwith %}
 
       <form method="post">
-        {{ password_update_form.hidden_tag() }}
+        {{ form.hidden_tag() }}
         <div class="field">
-          <div class="control">
-            {{ password_update_form.old_password(class="input") }}
-          </div>
+          <div class="control">{{ form.old_password(class="input") }}</div>
         </div>
         <div class="field">
-          <div class="control">
-            {{ password_update_form.password(class="input") }}
-          </div>
+          <div class="control">{{ form.password(class="input") }}</div>
         </div>
         <div class="field">
-          <div class="control">
-            {{ password_update_form.password2(class="input") }}
-          </div>
+          <div class="control">{{ form.password2(class="input") }}</div>
         </div>
-        {{ password_update_form.submit2(class_="button is-block is-info
-        is-fullwidth") }}
+        {{ form.submit2(class_="button is-block is-info is-fullwidth") }}
       </form>
     </div>
   </div>
