update error and success notifications on all forms

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -2,8 +2,12 @@
 <div class="column is-4 is-offset-4">
   <h3 class="title">Login</h3>
   <div class="box">
-    {% with messages = get_flashed_messages() %} {% if messages %}
+    {% with messages = get_flashed_messages(category_filter=['error']) %} {% if
+    messages %}
     <div class="notification is-danger">{{ messages[0] }}</div>
+    {% endif %} {% endwith %} {% with messages =
+    get_flashed_messages(category_filter=['success']) %} {% if messages %}
+    <div class="notification is-success">{{ messages[0] }}</div>
     {% endif %} {% endwith %}
     <form method="POST">
       {{ form.hidden_tag() }}
