--- a/app/templates/resend_confirmation.html
+++ b/app/templates/resend_confirmation.html
@@ -2,9 +2,18 @@
 <div class="column is-4 is-offset-4">
   <h3 class="title">Resend Confirmation Email</h3>
   <div class="box">
-    {% with messages = get_flashed_messages() %} {% if messages %}
+    {% with messages = get_flashed_messages(category_filter=['error']) %} {% if
+    messages %}
     <div class="notification is-danger">{{ messages[0] }}</div>
-    {% endif %} {% endwith %}
+    {% endif %} {% endwith %} {% with messages =
+    get_flashed_messages(category_filter=['success']) %} {% if messages %}
+    <div class="notification is-success">{{ messages[0] }}</div>
+    {% endif %} {% endwith %} {% if form.email.errors %} {% for error in
+    form.email.errors %}
+
+    <div class="notification is-danger">{{ error }}</div>
+    {% endfor %} {% endif %}
+
     <form method="POST">
       {{ form.hidden_tag() }}
 
@@ -12,14 +21,7 @@
         <div class="control">{{ form.email(class_="input") }}</div>
       </div>
 
-      {% if form.email.errors %}
-      <ul class="errors">
-        {% for error in form.email.errors %}
-        <li>{{ error }}</li>
-        {% endfor %}
-      </ul>
-      {% endif %} {{ form.submit(class_="button is-block is-info is-fullwidth")
-      }}
+      {{ form.submit(class_="button is-block is-info is-fullwidth") }}
     </form>
   </div>
 </div>
