--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -2,9 +2,26 @@
 <div class="column is-4 is-offset-4">
   <h3 class="title">Sign Up</h3>
   <div class="box">
-    {% with messages = get_flashed_messages() %} {% if messages %}
+    {% with messages = get_flashed_messages(category_filter=['error']) %} {% if
+    messages %}
     <div class="notification is-danger">{{ messages[0] }}</div>
-    {% endif %} {% endwith %}
+    {% endif %} {% endwith %} {% with messages =
+    get_flashed_messages(category_filter=['success']) %} {% if messages %}
+    <div class="notification is-success">{{ messages[0] }}</div>
+    {% endif %} {% endwith %} {% if form.name.errors %} {% for error in
+    form.name.errors %}
+    <div class="notification is-danger">{{ error }}</div>
+    {% endfor %} {% endif %} {% if form.email.errors %} {% for error in
+    form.email.errors %}
+    <div class="notification is-danger">{{ error }}</div>
+    {% endfor %} {% endif %} {% if form.password.errors %} {% for error in
+    form.password.errors %}
+    <div class="notification is-danger">{{ error }}</div>
+    {% endfor %} {% endif %} {% if form.password2.errors %} {% for error in
+    form.password2.errors %}
+    <div class="notification is-danger">{{ error }}</div>
+    {% endfor %} {% endif %} {% if form.password2.errors %} {% endif %}
+
     <form method="POST">
       {{ form.hidden_tag() }}
       <div class="field">
@@ -15,44 +32,15 @@
         <div class="control">{{ form.name(class_="input") }}</div>
       </div>
 
-      {% if form.name.errors %}
-      <ul class="errors">
-        {% for error in form.name.errors %}
-        <li>{{ error }}</li>
-        {% endfor %}
-      </ul>
-      {% endif %} {% if form.email.errors %}
-      <ul class="errors">
-        {% for error in form.email.errors %}
-        <li>{{ error }}</li>
-        {% endfor %}
-      </ul>
-      {% endif %}
-
       <div class="field">
         <div class="control">{{ form.password(class_="input") }}</div>
       </div>
-
-      {% if form.password.errors %}
-      <ul class="errors">
-        {% for error in form.password.errors %}
-        <li>{{ error }}</li>
-        {% endfor %}
-      </ul>
-      {% endif %}
 
       <div class="field">
         <div class="control">{{ form.password2(class_="input") }}</div>
       </div>
 
-      {% if form.password2.errors %}
-      <ul class="errors">
-        {% for error in form.password2.errors %}
-        <li>{{ error }}</li>
-        {% endfor %}
-      </ul>
-      {% endif %} {{ form.submit(class_="button is-block is-info is-fullwidth")
-      }}
+      {{ form.submit(class_="button is-block is-info is-fullwidth")}}
     </form>
   </div>
   {% endblock %}
